# Async_FastApi_Warehouse_API

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-entrypoint.sh
manage/: README.md  remove.sh  restart.sh  start.sh  stop.sh
nginx/: default.conf
src/: config.py
src/api/: app.py  factory_app.py
src/api/crud_operations/: base_crud_operations.py  current_stocks.py  price.py  product.py  product_count.py  user.py  user_auth.py  warehouse.py  warehouse_group.py
src/api/crud_operations/utils/: base_crud_utils.py  price.py  product.py  product_count.py  warehouse.py  warehouse_group.py
src/api/dependencies/: auth.py  db.py
src/api/models/: price.py  product.py  product_count.py  user.py  warehouse.py  warehouse_group.py
src/api/routers/: current_stocks.py  price.py  product.py  product_count.py  user.py  users_auth.py  warehouse.py  warehouse_group.py
src/api/schemas/current_stocks/: base_schemas.py
src/api/schemas/jwt/: base_shemas.py  response_schemas.py
src/api/schemas/price/: base_schemas.py  response_schemas.py
src/api/schemas/product/: base_schemas.py  response_schemas.py
src/api/schemas/product_count/: base_schemas.py  response_schemas.py
src/api/schemas/user/: base_schemas.py  response_schemas.py
src/api/schemas/validating/: user.py
src/api/swagger/: current_stocks.py  price.py  product.py  product_count.py  user.py  user_auth.py  warehouse.py  warehouse_group.py
src/db/: __main__.py  alembic.ini  cli.py  db_sqlalchemy.py
src/db/alembic_migrations/: env.py
src/db/tools/: db_operations.py  sql_operations.py  utils.py
src/utils/auth/: jwt.py  password_cryptograph.py  signature.py
src/utils/celery/: celery_config.py  celery_tasks.py
src/utils/color_logging/: main.py  settings.py
src/utils/composing_email/: main.py  utils.py
src/utils/db_populating/: __main__.py  cli.py  data_preparation.py  input_data.py  inserting_data_into_db.py
src/utils/exceptions/: base.py  user.py
src/utils/exceptions/crud/: base.py  (+1 more)
src/utils/response_generation/: main.py
tests/functional_tests/: conftest.py  test_data.py  utils.py
tests/functional_tests/routers/: test_docs.py  test_product.py  test_user.py  test_user_auth.py
(+15 files in other folders)
